--- a/컴포넌트/component/컴포넌트의개념.md
+++ b/컴포넌트/component/컴포넌트의개념.md
@@ -29,9 +29,6 @@ const Mycomponent = (props) => {
 }
 
 export default Mycomponent;
-
-
-export default Mycomponent;
 ```
 
 # props값 지정하기
@@ -211,3 +208,399 @@ export default Mycomponent;
 ```
 
 # 클래스형 컴포넌트에서 props 사용방법
+
+
+
+```react
+import React, { Component } from 'react';
+import ProTypes from 'prop-types';
+
+class Mycomponent extends Component{
+  render(){
+    const{name,favoriteNumber,children} = this.props;
+    return (
+      <div>
+        안녕하세요, 제 이름은 {name}입니다.
+        children의 값은 {children}
+        입니다.
+        <br />
+        제가 좋아하는 숫자는 {favoriteNumber}입니다.
+      </div>
+    );
+  }
+}
+Mycomponent.defaultProps = {
+  name: '기본 이름'
+}
+
+Mycomponent.prototypes = {
+  name : ProTypes.string,
+  favoriteNumber : ProTypes.number.isRequired
+};
+
+export default Mycomponent;
+```
+
+
+
+클래스형 컴포넌트에서 defaultProps와 proTypes를 설정할 때 class 내부에서 지정할 수 있다.
+
+```react
+import React, { Component } from 'react';
+import ProTypes from 'prop-types';
+
+class Mycomponent extends Component{
+  static defaultProps = {
+    name: '기본 이름'
+  }
+  static ProTypes = {
+    name : ProTypes.string,
+    favoriteNumber :ProTypes.number.isRequired
+  } 
+  render(){
+    const{name,favoriteNumber,children} = this.props;
+    return (
+      <div>
+        안녕하세요, 제 이름은 {name}입니다.
+        children의 값은 {children}
+        입니다.
+        <br />
+        제가 좋아하는 숫자는 {favoriteNumber}입니다.
+      </div>
+    );
+  }
+}
+export default Mycomponent;
+```
+
+
+
+# state.
+
+```react
+import React, { Component } from "react";
+
+class Counter extends Component {
+  constructor(props) {
+    super(props);
+    this.state = {
+      number: 0,
+    };
+  }
+  render() {
+    const { number } = this.state;
+    return (
+      <div>
+        <h1>{number}</h1>
+        <button
+          onClick={() => {
+            this.setState({ number: number + 1 });
+          }}
+        >
+          +1
+        </button>
+        <button
+            onClick={()=>{
+                this.setState({number : number - 1});
+            }}>
+                -1
+        </button>
+      </div>
+    );
+  }
+}
+export default Counter;
+
+```
+
+```react
+import React from "react";
+import Counter from "./Counter";
+
+const App = () => {
+  return (
+    <div>
+      <Counter />
+    </div>
+  );
+};
+
+export default App;
+
+```
+
+## state 객체 안에 여러 값이 있을 때
+
+```react
+import React, { Component } from "react";
+
+class Counter extends Component {
+  constructor(props) {
+    super(props);
+    this.state = {
+      number: 0,
+      fixedNumber: 0
+    };
+  }
+  render() {
+    const { number, fixedNumber } = this.state;
+    return (
+      <div>
+        <h1>{number}</h1>
+        <h2>바뀌지 않는 값 : {fixedNumber}</h2>
+        <button
+          onClick={() => {
+            this.setState({ number: number + 1 });
+          }}
+        >
+          +1
+        </button>
+        <button
+            onClick={()=>{
+                this.setState({number : number - 1});
+            }}>
+                -1
+        </button>
+      </div>
+    );
+  }
+}
+export default Counter;
+
+```
+
+
+
+# state를 constructor에서 꺼내기
+
+이전까지는 state의 초깃값을 지정하기위해 constructor 메서드를 선언해 주었다.
+
+또 다른 방식으로도 state값을 초기화 할 수 있다.
+
+```react
+import React, { Component } from "react";
+
+class Counter extends Component {
+  state = {
+    number : 0,
+    fixedNumber : 0
+  }
+```
+
+# this.setState에 객체 대신 함수 인자 전달하기
+
+```react
+<button
+          onClick={() => {
+            this.setState({ number: number + 1 });
+            this.setState({number : this.state.number +1});
+          }}
+        >
+```
+
+이렇게 하더라도 2씩 더해지는 것이 아닌 1씩 더해진다.
+
+왜일까?
+
+바로 this.setState를 사용하여 state의 값을 업데이트 할 때는 상태가 비동기적으로 업데이트 되기 때문이다.
+
+즉 첫 번째 this.setState({ number: number + 1 });가 실행이 완료되어 **number의 값이 0에서 1 오르는 동안** 
+
+ 다음 구문인  this.setState({number : this.state.number +1});에서도 **number의 값이 0에서 1로 오르기 때문이다**
+
+그래서 이에대한 해결책은 바로 this.setState를 사용할 때  객체 대신에 함수를 인자로 넣어주는 것이다.
+
+```react
+this.setState((prevState, props)=>{
+	return{
+	//업데이트 할 내용
+	}
+})
+```
+
+
+
+prevState = 기존 상태, props는 현재 지니고 있는 props를 가리킨다.
+
+만약 업데이트 과정에서 props가 필요 없다면 생략가능하다.
+
+```react
+import React, { Component } from "react";
+
+class Counter extends Component {
+  state = {
+    number : 0,
+    fixedNumber : 0
+  }
+  render() {
+    const { number, fixedNumber } = this.state;
+    return (
+      <div>
+        <h1>{number}</h1>
+        <h2>바뀌지 않는 값 : {fixedNumber}</h2>
+        <button
+          onClick={() => {
+            this.setState(prevState =>{
+              return{
+                number : prevState.number+1
+              }
+            })
+            this.setState(prevState =>{
+              return{
+                number : prevState.number+1
+              }
+            })
+          }}
+          
+        >
+          +1
+        </button>
+        <button
+            onClick={()=>{
+                this.setState(prevState =>{
+                  return {
+                    number : prevState.number-1
+                  }
+                })
+            }}>
+                -1
+        </button>
+      </div>
+    );
+  }
+}
+export default Counter;
+
+```
+
+이렇게 고치면 1씩 증가된다.
+
+또 다른 방법으로는 콜백이있다.
+
+# 콜백 이용
+
+```react
+import React, { Component } from "react";
+
+class Counter extends Component {
+  state = {
+    number : 0,
+    fixedNumber : 0
+  }
+  render() {
+    const { number, fixedNumber } = this.state;
+    return (
+      <div>
+        <h1>{number}</h1>
+        <h2>바뀌지 않는 값 : {fixedNumber}</h2>
+        <button
+          onClick={() => {
+            this.setState(prevState =>{
+              return{
+                number : prevState.number+1
+              }
+            })//클릭 시 함수가 순차적으로 실행
+            this.setState(prevState =>{
+              return{
+                number : prevState.number+1
+              }
+            })
+          }}
+          
+        >
+          +1
+        </button>
+        <button
+            onClick={()=>{
+                this.setState(prevState =>{
+                  return {
+                    number : prevState.number-1
+                  }
+                })
+            }}>
+                -1
+        </button>
+      </div>
+    );
+  }
+}
+export default Counter;
+
+```
+
+# 비구조화 할당을 통한 useState
+
+```react
+import React, {useState} from 'react';
+
+const Say = () =>{
+    const [message, setMessage] = useState('');
+    const onClickEnter = () => setMessage('안녕하세요!');
+    const onClickLeave = () => setMessage('안녕히가세요!');
+
+    return (
+        <div>
+            <button onClick={onClickEnter}>입장</button>
+            <button onClick={onClickLeave}>퇴장</button>
+            <h1>{message}</h1>
+        </div>
+    );
+};
+export default Say;
+```
+
+useState 함수의 인자에는 상태의 초깃값을 넣어준다.
+
+두번 째 인자로는 세터 함수, 즉 상태를 변경시켜주는 함수를 넣어준다.
+
+
+
+### useState여러 번 사용하기
+
+```react
+import React, {useState} from 'react';
+
+const Say = () =>{
+    const [message, setMessage] = useState('');
+    const onClickEnter = () => setMessage('안녕하세요!');
+    const onClickLeave = () => setMessage('안녕히가세요!');
+
+    const [color, setColor] = useState('black');
+
+    return (
+        <div>
+            <button onClick={onClickEnter}>입장</button>
+            <button onClick={onClickLeave}>퇴장</button>
+            <h1 style = {{color}}>{message}</h1>
+            <button style={{color:'red'}} onClick={()=>setColor('red')}>빨간색</button>
+            <button style={{color:'green'}} onClick={()=>setColor('green')}>초록색</button>
+            <button style={{color:'blue'}} onClick={()=>setColor('blue')}>파란색</button>
+        </div>
+    );
+};
+export default Say;
+```
+
+
+
+### state를 사용할 때 주의할 점
+
+어떤 종류의 컴포넌트든 state를 사용하며  값을 바꿔야 할 때 setState 혹은 useState를 통해 전달받은 세터함수를 사용해야한다.
+
+잘못된 코드 예시
+
+```react
+this.state.number = this.state.number+1
+```
+
+```react
+const [object, setObject] - useState({a:1, b:2});
+object.b = 2;
+```
+
+
+
+결론적으로 props는 부모 컴포넌트가 자식 컴포넌트의 속성을 설정하고
+
+state는 컴포넌트 자체적으로 지닌 값으로 컴포넌트 내부에서 값을 업데이트 할 수 있다.
+
