--- a/01.컴포넌트/component/컴포넌트의개념.md
+++ b/01.컴포넌트/component/컴포넌트의개념.md
@@ -3,11 +3,11 @@
 컴포넌트는 재사용이 가능한 최소한의 단위로 리엑트에서 사용자가 볼 수 있는 요소는 여러가지 컴포넌트로 구성되어있습니다. 
 
 # 컴포넌트의 종류
-1.[클래스형 컴포넌트](https://github.com/jhoon12/React/blob/master/%EC%BB%B4%ED%8F%AC%EB%84%8C%ED%8A%B8/component/src/classComponent.js)
+1.[클래스형 컴포넌트](https://github.com/jhoon12/React_Study/blob/master/01.%EC%BB%B4%ED%8F%AC%EB%84%8C%ED%8A%B8/component/src/classComponent.js)
 
 클래스형 컴포넌트에서는 render함수가 꼭 있어야 하며 그 안에서 보여주어야 할 JSX를 반환해야 합니다.
 
-2.[함수형 컴포넌트](https://github.com/jhoon12/React/blob/master/%EC%BB%B4%ED%8F%AC%EB%84%8C%ED%8A%B8/component/src/functionComponent.js_4)
+2.[함수형 컴포넌트](https://github.com/jhoon12/React_Study/blob/master/01.%EC%BB%B4%ED%8F%AC%EB%84%8C%ED%8A%B8/component/src/functionComponent.js)
 
 함수형 컴포넌트는 선언이 편하고, 파일크기가 더 작지만 state와 라이프사이클 API의 사용이 불가능하다(Hooks라는 기능이 도입되며 해결).
 
