--- a/05.컴포넌트의 라이프사이클 메서드/lifecycle/컴포넌트의 라이프사이클 메서드.md
+++ b/05.컴포넌트의 라이프사이클 메서드/lifecycle/컴포넌트의 라이프사이클 메서드.md
@@ -1,227 +1,66 @@
-#  컴포넌트의 라이프사이클 메서드
+# Hooks
+
+Hooks란 리엑트의 함수형 컴포넌트에서도 상태관리를 할 수 있는 기능 useState와 같은 기능을 제공하여 기존의 함수형 컴포넌트에서 할 수 없었던 다양한 작업을 할 수 있게 해준다.
 
 
 
-모든 리엑트 컴포넌트에는 라이프사이클이 존재한다.
-
-그리고 그에 따른 메서드 또한 존재하며 **클래스형 컴포넌트에서만** 사용 가능하다.
-
-대신 Hooks기능을 통해 비슷한 작업을 처리할 수 있다.
-
-
-
-### 컴포넌트의 업데이트
-
-1. props가 바뀔 때
-
-2. state가 바뀔 때
-
-3. 부모컴포넌트가 리렌더링 될 때
-
-4. this.forceUpdate로 강제로 렌더링을 트리거할 때
-
-   
-
-## 라이프 사이클 메서드 살펴보기
-
-### render()함수
-
-리엑트 요소를 반환한다. 요소는 div와 같은 태그가 될 수 있고, 컴포넌트가 될 수도 있다.
-
-이 메서드 안에서는 이벤트 설정이 아닌 곳에서 setState를 사용하면 안된다.
-
-### constructor 메서드
-
-컴포넌트를 만들 때 처음으로 실행됨
-
-이 메서드에서는 초기 state를 설정할 수 있다.
-
-### getDrivedStateFromProps 메서드
-
-props로 받아온 값을 state에 동기화 시킬 때 사용되며 컴포넌트가 마운트(DOM객체가 생성되고 나타나는 것) 될 때 호출됨
+## useState
 
 ```react
-static getDerivedStateFromProps(nextProps, prevState){
-	if(nextProps.value !== prevState.value){
-		return{value: nextProps.value};
-	}
-	return null;
+//Counter.js
+import React, {useState} from 'react'
+
+const Counter = ()=>{
+    const[value, setValue] = useState(0);
+
+    return(
+        <div>
+            <p>
+                현재 카운터 값은 <b>{value}</b> 입니다.
+            </p>
+            <button onClick={()=>setValue(value+1)}>+1</button>
+            <button onClick={() => setValue(value -1)}>-1</button>
+        </div>
+    )
 }
+export default Counter
 ```
 
-### componentDidMount 메서드
 
-첫 렌더링을 다 마친 후에 실행함
 
-### shouldComponentUpdate 메서드
-
-props 또는 state를 변경했을 때 리렌더링을 시작할지 여부를 지정하는 메서드이다.
-
-반드시 true or false를 리턴해야하며 기본적으로는 true를 반환한다.
-
-ex) shouldComponentUpdate(nextProps, nextState){...}
-
-### getSnapshotBeforeUpdate 메서드
-
-render 에서 만들어진 결과물이 브라우저에 실제 반영되기 직전에 호출된다.
-이 메서드의 반환값은 componentDidUpdate에서 세 번째 파라미터인 snapshot 값으로 전달받을 수 있는데 
-주로 업데이트 하기 직전의 값을 참고할 떄 사용 (ex: 스크롤바 위치 유지)
-
-### componentDidUpdate 메서드
-
-리렌더링을 완료한 순간 실행한다. 업데이트가 끝난 직후이므로 DOM관련 처리를 해도 무방하다.
-prevProps 또는 prevState를 사용하여 컴포넌트가 이전에 가졌던 데이터에 접근할 수 있다.
-
-### componentWillUnmount 메서드
-
-컴포넌트를 DOM에서 제거할 때 실행함. componentDidMount에서 등록한 이벤트, 타이머, 직접 생성한 DOM이 있다면 여기서 제거해야함
-
-### componentDidCatch 메서드
-
-컴포넌트 렌더링 도중에 에러가 발생했을때 오류 UI를 보여 줄 수 있게 해 준다. 
-
-ex) 
+## useState를 여러 번 사용하기
 
 ```react
-componentDidCatch(error,info){
-	this.setState({
-		error : true
-	});
-	console.log({error, info})
-}
-```
+import React, {useState} from 'react';
 
-error는 파라미터에 어떤 에러가 발생했는지 알려 주며, info파라미터는 어디에 있는 코드에서 오류가 발생했는지 알려줌
+const Info = () =>{
+    const [name, setName] = useState('');
+    const [nickname, setNickname] = useState('');
 
-## 예제
-
-```react
-import React, { Component } from "react";
-
-class LifeCycleSample extends Component { 
-    state = {
-        number : 0,
-        color : null,
+    const onChangeName = e => {
+        setName(e.target.value);
+    };
+    const onChangeNickname = e =>{
+        setNickname(e.target.value);
     }
-
-    myRef = null;
-
-    constructor(props){
-        super(props);
-        console.log('constructor');
-    }
-
-    static getDerivedStateFromProps(nextProps, prevState) {
-        console.log('getDerivedStateFromProps');
-        if (nextProps.color !== prevState.color) {
-          return { color: nextProps.color };
-        }
-        return null;
-      }
-    componentDidMount() {
-        console.log('componentDidMount');
-    }
-    shouldComponentUpdate(nextProps, nextState){
-        console.log('shouldComponentUpdate', nextProps, nextState);
-        return nextState.number % 10 !== 4
-    }
-    componentWillUnmount() {
-        console.log(this.componentWillUnmount);
-    }
-    handleClick = ()=>{
-        this.setState({
-            number:this.state.number+1
-        })
-    }
-    getSnapshotBeforeUpdate(prevProps, prevState, snapshot){
-        console.log('componentDidUpdate', prevProps, prevState);
-        if(snapshot){
-            return this.myRef.style.colr
-        }
-    }
-    componentDidUpdate(prevProps, prevState, snapshot){
-        console.log('componentDidUpdate', prevProps, prevState);
-        if(snapshot){
-            console.log('업데이트 직전 생상: ', snapshot);
-        }
-    }
-    render(){
-        console.log('render');
-        const style = {color:this.props.color};
-        return(
+    return(
+        <div>
             <div>
-                {this.props.missing.value}
-                <h1 style={style} ref={ref=>this.myRef= ref}>{this.state.number}</h1>
-                <p>color: {this.state.color}</p>
-                <button onClick={this.handleClick}>
-                    더하기</button> 
+                <input value={name} onChange={onChangeName} />
+                <input value={nickname} onChange={onChangeNickname}/>
             </div>
-        )
-    }
-}
-export default LifeCycleSample
-//1. constructor
-// 2. getDerivedStateFromProps(props state에 동기화)
-// 3.  render
-// 4. componentDidMount (첫 렌더링)
-```
+            <div>
+                <div>
+                    <b>이름:</b> {name} 
+                </div>
+                <div>
+                    <b>닉네임:</b>{nickname}
+                </div>
+            </div>
+        </div>
+    );    
+};
 
-```react
-
-import React, { Component } from 'react';
-import LifeCycleSample from './LifeCycleSample';
-
-
-// 랜덤 색상을 생성합니다.
-function getRandomColor() {
-  return '#' + Math.floor(Math.random() * 16777215).toString(16);
-}
-class App extends Component {
-  state = {
-    color: '#000000'
-  };
-  handleClick = () => {
-    this.setState({
-      color: getRandomColor()
-    });
-  };
-  render() {
-    return (
-      <div>
-        <button onClick={this.handleClick}>랜덤 색상</button>
-          <LifeCycleSample color={this.state.color} />
-          
-
-      </div>
-    );
-  }
-}
-export default App;
-```
-
-
-
-## 에러 잡아내기
-
-```react
-import React, { Component } from 'react';
-
-class ErrorBoundary extends Component{
-    state = {
-        error : false
-    }
-    componentDidCatch(error, info){
-        this.setState({
-            error:true
-        })
-        console.log({error, info});
-    }
-    render(){
-        if (this.state.error) return <div>에러가 발생했습니다.</div>
-        return this.props.children;
-    }
-
-}
-export default ErrorBoundary
+export default Info;
 ```
 
