--- a/15. 리덕스 라이브러리 이해하기/리덕스 라이브러리 이해하기.md
+++ b/15. 리덕스 라이브러리 이해하기/리덕스 라이브러리 이해하기.md
@@ -42,3 +42,204 @@ const changeInput - text => ({
 
 액션이 디스패치되어 상태가 없데이트 될 때마다 호출된다.
 
+## 액션 타입과 액션 생성 함수 정의
+
+```jsx
+const divToggle = document.querySelector('.toggle');
+const counter = document.querySelector('h1');
+const btnIncrease = document.querySelector('#increase');
+const btnDecrease = document.querySelector("#decrease");
+
+const TOGGLE_SWITCH = "TOGGlE_SWITCH";
+const INCREASE = "INCREASE";
+const DECREASE = "DECREASE";
+```
+
+상태(state)에 변화를 일으키는 것을 액션이라고한다.
+그리고 이 액션에는 고유한 이름을 갖고 있어야 한다.
+
+```react
+const divToggle = document.querySelector('.toggle');
+const counter = document.querySelector('h1');
+const btnIncrease = document.querySelector('#increase');
+const btnDecrease = document.querySelector("#decrease");
+
+const TOGGLE_SWITCH = "TOGGlE_SWITCH";
+const INCREASE = "INCREASE";
+const DECREASE = "DECREASE";
+
+const toggleSwitch = () => ({type=TOGGLE_SWITCH});
+const increase = () =>({type=INCREASE, differ});
+const decresae = ()=>({type=DECREASE});
+
+```
+
+이 액션 이름을 사용하여 액션 객체를 만드는 액션 생성 함수이다.
+
+## 초깃 값 설정
+
+초깃 값의 형태는 자유이다.
+
+```react
+
+
+const divToggle = document.querySelector('.toggle');
+const counter = document.querySelector('h1');
+const btnIncrease = document.querySelector('#increase');
+const btnDecrease = document.querySelector("#decrease");
+
+const TOGGLE_SWITCH = "TOGGlE_SWITCH";
+const INCREASE = "INCREASE";
+const DECREASE = "DECREASE";
+
+const toggleSwitch = () => ({type=TOGGLE_SWITCH});
+const increase = () =>({type=INCREASE, difference});
+const decresae = ()=>({type=DECREASE});
+
+const initialState = {
+    toggle: false,
+    counter: 0
+}
+```
+
+## 리듀서 함수 정의
+
+라듀서는 변화를 일으키는 함수이다.
+파라미터로 state와 action 값을 받아 온다.
+
+```react
+
+
+const divToggle = document.querySelector('.toggle');
+const counter = document.querySelector('h1');
+const btnIncrease = document.querySelector('#increase');
+const btnDecrease = document.querySelector("#decrease");
+
+const TOGGLE_SWITCH = "TOGGlE_SWITCH";
+const INCREASE = "INCREASE";
+const DECREASE = "DECREASE";
+
+const toggleSwitch = () => ({type:TOGGLE_SWITCH});
+const increase = () =>({type:INCREASE, difference});
+const decresae = ()=>({type:DECREASE});
+
+const initialState = {
+    toggle: false,
+    counter: 0
+};
+
+function reducer(state = initialState, action){
+    switch (action.type){
+        case TOGGLE_SWITCH:
+            return{
+                ...state,//불변성 유지
+                toggle: !state.toggle
+            }
+        case INCREASE:
+            return{
+                ...state,
+                counter: state.counter + action.difference
+            };
+        case DECREASE:
+            return{
+                ...state,
+                counter: state.counter -1
+            };
+        default:
+            return state;
+    }
+}
+```
+
+## 스토어 만들기
+
+```react
+import {createStore} from 'redux';
+
+const divToggle = document.querySelector('.toggle');
+const counter = document.querySelector('h1');
+const btnIncrease = document.querySelector('#increase');
+const btnDecrease = document.querySelector("#decrease");
+
+const TOGGLE_SWITCH = "TOGGlE_SWITCH";
+const INCREASE = "INCREASE";
+const DECREASE = "DECREASE";
+
+const toggleSwitch = () => ({type:TOGGLE_SWITCH});
+const increase = () =>({type:INCREASE, difference});
+const decresae = ()=>({type:DECREASE});
+
+const initialState = {
+    toggle: false,
+    counter: 0
+};
+
+function reducer(state = initialState, action){
+    switch (action.type){
+        case TOGGLE_SWITCH:
+            return{
+                ...state,//불변성 유지
+                toggle: !state.toggle
+            }
+        case INCREASE:
+            return{
+                ...state,
+                counter: state.counter + action.difference
+            };
+        case DECREASE:
+            return{
+                ...state,
+                counter: state.counter -1
+            };
+        default:
+            return state;
+    }
+}
+
+const store = createStore(reducer);
+```
+
+## render 함수 만들기
+
+ render는 상태가 업데이트 될 때마다 호출되며 리엑트의 render함수와는 다르게 아마 html을 사용하여 만들어진 UI의 속성을 상태에 따라 변경해 준다.
+
+```react
+const render = ()=>{
+    const state = store.getState();//현재 상태를 불러옴
+    if(state.toggle){
+        divToggle.classList.add('active');
+    }
+    else{
+        divToggle.classList.remove('active');
+    }
+
+    counter.innerText= state.counter
+};
+render();
+```
+
+## 구독하기
+
+```react
+store.subscribe(render);
+```
+
+store의 상태가 변경될 때마다 render함수 호출
+
+## 액션 발생하기
+
+```jsx
+(...)
+store.subscribe(render);
+
+divToggle.onclick = () =>{
+    store.dispatch(toggleSwitch());
+}
+btnIncrease.onclick = () => {
+    store.dispatch(increase(1));
+};
+btnDecrease.onclick = ()=>{
+    store.dispatch(decresae())
+}
+```
+
