--- a/15. 리덕스 라이브러리 이해하기/리덕스 라이브러리 이해하기.md
+++ b/15. 리덕스 라이브러리 이해하기/리덕스 라이브러리 이해하기.md
@@ -226,7 +226,7 @@ store.subscribe(render);
 
 store의 상태가 변경될 때마다 render함수 호출
 
-## 액션 발생하기
+## 액션 발생시키기
 
 ```jsx
 (...)
@@ -243,3 +243,23 @@ btnDecrease.onclick = ()=>{
 }
 ```
 
+## 리덕스의 세 가지 규칙
+
+### 1. 단일 스토어
+
+하나의 프로젝트에는 하나의 스토어가 있다. 
+물론 여러개의 스토어를 만들 수 있지만, 특정 업데이트가 너무 빈번하게 일어나면 상태 관리가 복잡해지기에 권장하지 않는다.
+
+### 읽기 전용 상태
+
+기존 리엑트에서 setState를 사용해서 업데이트할 때도 불변성을 지켜주었다.
+리덕스도 마찬가지이다. 똑같이 불변성을 유지해주어야 하는데 내부적으로 데이터가 변경되는 것을 감지하기 위해
+얕은 비교 검사를 하기 때문이다.
+
+### 리듀서는 순수한 함수
+
+변화를 일으키는 리듀서 함수는 순수함수여야 한다.
+
+
+
+1. 
