--- a/15. 리덕스 라이브러리 이해하기/리덕스 라이브러리 이해하기.md
+++ b/15. 리덕스 라이브러리 이해하기/리덕스 라이브러리 이해하기.md
@@ -262,4 +262,15 @@ btnDecrease.onclick = ()=>{
 
 
 
-1. 
+## 개인적인 정리
+리덕스의 로직
+
+1. 맨 처음에 리듀서 함수가 내부적으로 실행되고 그에 따라 기존의 state값이 store에 반환된다.
+(처음 파라미터로 state=initialState를 하기 때문에 처음에 설정해 둔 기본값이 스토어에 저장된다.)
+
+2. 뷰에서 액션이 발생하여 디스패치를 통해 액션이 발생한다.
+이 때 액션생성객체가 파라미터로 들어간다. 즉 리듀서 함수에 액션생성객체를 통해 생성된 객체가 파라미터로 들어간다.
+
+3.리듀서 함수가 실행되고, 파라미터에 따라 결과값이 store에 리턴된다.
+
+4. store가 구독중이던 함수를 실행시킨다.
